Improve Jupyter notebook: add parameter comments, physical time evolution, figure output, and new trap frequency parameter

--- a/src/bec_simulation.ipynb
+++ b/src/bec_simulation.ipynb
@@ -56,28 +56,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simulation parameters\n",
+    "# Simulation parameters with detailed comments\n",
     "args = Namespace(\n",
+    "    # Atomic mass of the particle in amu (e.g. 87 means Rb-87)\n",
     "    relative_atomic_mass=87, \n",
+    "    # Scattering length in Bohr radius (e.g. 10 means a_s = 10 a_Bohr)\n",
     "    scattering_length=-10,\n",
+    "    # Number of atoms\n",
     "    atom_number=2500, \n",
+    "    # Total duration of simulation in ms\n",
     "    duration=200, \n",
+    "    # Time step in ms\n",
     "    dt=0.5, \n",
+    "    # After how many time steps to sample the wave function\n",
     "    sampling_interval=10, \n",
+    "    # Radius of the real space simulation region in μm (e.g. (50, 40) means -50 to 50 μm in x and -40 to 40 μm in y)\n",
     "    radius_xy=(50, 50), \n",
+    "    # Number of points in x and y directions (e.g. (256, 256) means 256 points in both x and y directions) (When N is a power of 2, the FFT is faster)\n",
     "    number_xy=(256, 256),\n",
+    "    # Trapping frequency in ms^-1\n",
     "    omega_trap=0.01*np.pi, \n",
+    "    # Center of the trap in μm (e.g. (0, 0) means the center is at (0, 0) μm)\n",
     "    center_trap=(0, 0), \n",
+    "    # Anharmonic parameter (dimensionless) (V = 0.5*m*omega^2*((1-2*beta)*(x^2+y^2) + (beta/r_0)*(x^2+y^2)^2)), where r_0 is the length scale to keep beta dimensionless)\n",
     "    beta=-0.1, \n",
+    "    # Trapping frequency along z in ms^-1\n",
     "    omega_trap_z=0.005*np.pi, \n",
+    "    # Length scale to keep beta dimensionless (e.g. 1 means the length scale is 1 μm)\n",
     "    r_0=30, \n",
+    "    # Center of the BEC in μm (e.g. 25, 25 means the center is at (25, 25) μm, and r_0 will be set to sqrt(2)*25 μm)\n",
     "    center_bec=(30, 0), \n",
+    "    # The frequency of the harmonic trap whose ground state is this gaussian wavepacket\n",
     "    omega_bec=0.01*np.pi, \n",
+    "    # The angular momentum eigenstate (l, m) (e.g. (2, 1) means l = 2, m = 1)\n",
     "    angular_momentum_bec=(0, 0),\n",
+    "    # If set, perform imaginary time evolution\n",
     "    imaginary_time=False, \n",
+    "    # Velocity of the initial wavepacket in μm/ms (e.g. (0, 0) means no initial velocity)\n",
     "    velocity=(0, 3*cp.pi/10),\n",
+    "    # If set, save the simulation process as a video\n",
     "    video=False, \n",
+    "    # If set, save the simulation results as a figure\n",
     "    figure=True, \n",
+    "    # If set, save the mechanical quantities during the simulation\n",
     "    mechanics=True\n",
     ")\n",
     "\n",
